--- a/.github/workflows/front-build.yml
+++ b/.github/workflows/front-build.yml
@@ -6,41 +6,36 @@ on:
       - main
 
 jobs:
-  deploy:
-    runs-on: ubuntu-latest
+  build:
+    runs-on: ubuntu-18.04
     steps:
-      - name: Github Repository 파일 불러오기
-        uses: actions/checkout@v4
+      - name: Checkout source code.   # 레포지토리 체크아웃
+        uses: actions/checkout@master
 
-      - name: Cache node modules
-        uses: actions/cache@v3
+      - name: Cache node modules      # node modules 캐싱
+        uses: actions/cache@v1
         with:
           path: node_modules
-          key: ${{ runner.OS }}-build-${{ hashFiles('**/yarn.lock') }}
+          key: ${{ runner.OS }}-build-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
             ${{ runner.OS }}-build-
             ${{ runner.OS }}-
 
-          # 3 - 의존성 패키지 설치
-      - name: Install Dependencies
-        if: steps.cache.outputs.cache-hit != 'true'
-        run: yarn install
+      - name: Install Dependencies    # 의존 파일 설치
+        run: npm install
 
-            # 4 - 빌드
-      - name: Build
-        run: yarn build
+      - name: Build                   # React Build
+        run: npm run build
 
-      - name: AWS Resource에 접근할 수 있게 AWS credentials 설정
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          aws-region: ap-northeast-2
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-
-      - name: S3 기존 파일들 전체 삭제 후 새로 업로드
+      - name: Deploy                  # S3에 배포하기
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         run: |
-          aws s3 rm --recursive s3://werofrontend
-          aws s3 cp ./ s3://werofrontend/ --recursive
+          aws s3 cp \
+            --recursive \
+            --region ap-northeast-2 \
+            build s3://werofrontend
 
       - name: Cloudfront 캐시 무효화
         run: aws cloudfront create-invalidation --distribution-id E32HNS1QHTCMX6 --paths "/*"
