--- a/.github/workflows/front-build.yml
+++ b/.github/workflows/front-build.yml
@@ -2,9 +2,7 @@ on:
   # develop 브랜치에 push가 될 때마다 이 action이 실행됩니다.
   push:
     branches:
-      - develop
-    tags:
-      - 'development-**'
+      - main
 
 jobs:
   Deploy:
