CI/CD github action 구축

--- a/.github/workflows/front-build.yml
+++ b/.github/workflows/front-build.yml
@@ -32,7 +32,7 @@ jobs:
 
       # 4 - 빌드
       - name: Build
-        run: yarn build
+        run: npm build
 
       # 5 - AWS 인증
       - name: Configure AWS Credentials
